fix: better spacing on left

--- a/src/Search.module.css
+++ b/src/Search.module.css
@@ -13,18 +13,19 @@
 
 .left {
   display: flex;
-  flex-grow:1;
   flex-direction: column;
   padding-top: 0.5rem;
   height: 100%;
+  flex: 0 0 auto;
+  min-width: 15%;
 }
 
 .right {
-  width:85%;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   height: 100%;
+    flex:1;
 }
 
 
@@ -48,7 +49,7 @@
 }
 
 input.search {
-    align-self: center;
+  align-self: center;
   height: 10px;
   width: 200px;
   padding: 8px 32px 8px 10px;
